plutus-core/plutus-core/test/type-errors/constrTooFew.plc
(program 1.1.0
   (constr (sop [(con integer)] []) 0)
)
